k8s/servicename-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicename-depl
  namespace: default
  labels:
    app: servicename
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicename
  template:
    metadata:
      labels:
        app: servicename
    spec:
      containers:
        - name: servicename
          #Cloud Configuration
          #image: gcr.io/namespace/servicename:latest
          #imagePullPolicy: Always
          #ports:
          #  - containerPort: 3000

          #Local Configuration
          image: namespace/version/servicename:latest
---
apiVersion: v1
kind: Service
metadata:
  name: servicename-srv
spec:
  type: ClusterIP
  #type: NodePort
  selector:
    app: servicename
  ports:
    - name: servicename
      protocol: TCP
      port: 3000
      targetPort: 3000
